commit ajustes para retornar nomes em caixa alta