@@ -86,11 +86,10 @@ public class AcessoCidadaoService {
 
     public List<ResponsavelProponenteOpcoesDto> buscarPessoasUnidadePapelPrioritario(String unidadeGuid) {
 
-        List<ResponsavelProponenteOpcoesDto> result = ACWebClient.buscarAgentesPublicosPapeisPorGuidUnidade(
+        return ACWebClient.buscarAgentesPublicosPapeisPorGuidUnidade(
                 ACAuthService.getAuthorizationHeader(), unidadeGuid, true)
                 .stream()
-                .collect(Collectors.groupingBy(
-                        a -> a.AgentePublicoNome()))
+                .collect(Collectors.groupingBy(a -> a.AgentePublicoNome()))
                 .values()
                 .stream()
                 .flatMap(listaPorNome -> listaPorNome.stream().anyMatch(a -> Boolean.TRUE.equals(a.Prioritario()))
@@ -98,14 +97,12 @@ public class AcessoCidadaoService {
                         : listaPorNome.stream().limit(1))
                 .map(dto -> new ResponsavelProponenteOpcoesDto(
                         0L,
-                        dto.AgentePublicoNome(),
+                        dto.AgentePublicoNome().toUpperCase(),
                         dto.Nome().toUpperCase(),
                         dto.AgentePublicoSub(),
                         false))
                 .sorted((a, b) -> a.nome().compareToIgnoreCase(b.nome()))
-                .collect(Collectors.toList());
-
-        return result;
+                .toList();
 
     }
 
